--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,4 +1,7 @@
 @import './base/variables';
 
+@import './mixins/button';
+
 @import './base/display';
 @import './base/global';
+@import './base/button';
